# options-pricing-engine

./: notes_todo.txt  requirements.txt
options-pricing-engine/: .gitignore  .semgrep.yaml  OPERATIONS.md  README.md  RELEASE_NOTES.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.ini
options-pricing-engine/.github/workflows/: ci.yml
options-pricing-engine/docker/: Dockerfile  docker-compose.yml
options-pricing-engine/examples/: price_single.json
options-pricing-engine/monitoring/prometheus/: rules.yml
options-pricing-engine/reports/: generate_perf_snapshot.py  perf_snapshot.json
options-pricing-engine/src/options_engine/: __init__.py  _compat.py
options-pricing-engine/src/options_engine/api/: capsule.py  codec.py  config.py  dependencies.py  fastapi_app.py  mappers.py  middleware.py  routes.py  schemas.py  security.py  server.py  services.py
options-pricing-engine/src/options_engine/api/routes/: __init__.py  market_data.py  pricing.py  risk.py
options-pricing-engine/src/options_engine/api/schemas/: request.py  response.py
options-pricing-engine/src/options_engine/calib/: __init__.py  boards.py  heston_qe.py  sabr.py  select.py  validators.py
options-pricing-engine/src/options_engine/core/: __init__.py  models.py  pricing_engine.py  pricing_models.py  replay.py  variance_reduction.py  vol_surface_calibration.py  volatility_surface.py
options-pricing-engine/src/options_engine/greeks/: __init__.py  estimators.py  stability.py
options-pricing-engine/src/options_engine/observability/: __init__.py  metrics.py
options-pricing-engine/src/options_engine/security/: __init__.py  oidc.py
options-pricing-engine/src/options_engine/tests/: conftest.py  simple_client.py  utils.py
options-pricing-engine/src/options_engine/tests/american/: test_american_not_below_european.py  test_lsmc_basic.py  test_lsmc_guardrails.py  test_lsmc_props.py
options-pricing-engine/src/options_engine/tests/api/: test_api_american.py  test_api_core.py  test_api_replay.py
options-pricing-engine/src/options_engine/utils/: __init__.py  numerics.py  validation.py
(+18 files in other folders)
